# zk-rag-webapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  config.py  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
apps/api/: app.py
apps/api/routes/: auth.py
apps/backend/: app.py
apps/backend/api/: health.py  webhooks.py
apps/backend/api/v1/: auth.py
apps/backend/handler/: github.py  github_handler.py
apps/backend/services/: auth.py  document.py  document_service.py  embedding.py  embedding_service.py
assets/: Phoenix Project, the - Gene Kim.md  test.py
docs/: design-doc.md  github-webhook-integration.md
libs/clients/: github_client.py
libs/di/: container.py
libs/models/: Document.py  Documents.py  Embeddings.py  User.py  __init__.py
libs/models/pipeline/: README.md  __init__.py  config.py  documents.py  events.py  metadata.py  models.py  processor.py
libs/pipeline/: README.md  __init__.py  config.py  embedder.py  file_watcher.py  main.py  markdown_file_handler.py  pipeline.py  processor.py  test_pipeline.py
libs/pipeline/document_processor/: __init__.py  content_chunker.py  content_parser.py  document_processor.py  metadata_extractor.py
libs/pipeline/watchers/: file_watcher.py  source_watcher.py
libs/storage/: db.py
libs/storage/mappers/: pipeline_mappers.py
libs/storage/models/: user.py
libs/storage/repositories/: __init__.py  document.py  user.py
libs/storage/tables/: base.py  documents.py  user.py
libs/utils/document_processor/: content_parser.py  document_processor.py  metadata_extractor.py
scripts/: init_pipeline.py  run_pipeline.py
